--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "version": "1.0.0",
     "devDependencies": {
         "chai": "3.5.0",
-        "mocha": "3.2.0"
+        "mocha": "3.2.0",
+        "stryker": "0.5.9",
+        "stryker-api": "0.4.2",
+        "stryker-html-reporter": "0.3.0",
+        "stryker-mocha-runner": "0.2.0"
     },
     "scripts": {
-        "test": "node_modules/.bin/mocha --opts tests/mocha.opts"
+        "test": "node_modules/.bin/mocha --opts tests/mocha.opts",
+        "stryker": "stryker run stryker.conf.js"
     }
 }
