Start static analysis

--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
         "stryker-api": "0.4.2",
         "stryker-html-reporter": "0.3.0",
         "stryker-mocha-runner": "0.2.0",
-        "istanbul": "0.4.5"
+        "istanbul": "0.4.5",
+        "jshint": "2.9.4",
+        "jshint-html-reporter": "0.2.5",
+        "jshint-stylish": "2.2.1"
     },
     "scripts": {
         "test": "node_modules/.bin/mocha --opts test/mocha.opts",
         "stryker": "stryker run stryker.conf.js",
-        "coverage": "node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --recursive -R spec"
+        "coverage": "node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --recursive -R spec",
+        "jshint": "jshint --reporter=node_modules/jshint-stylish  app/app.js || true",
+        "jshint-html": "jshint --reporter node_modules/jshint-html-reporter/reporter.js test/app.spec.js > test-reports/report_test.html || true"
     }
 }
